Web Inspector: timeline record bars may overlap with the records column https://bugs.webkit.org/show_bug.cgi?id=76387
Reviewed by Yury Semikhatsky.

* inspector/front-end/timelinePanel.css:
(#timeline-container .split-view-sidebar-left):

Canonical link: https://commits.webkit.org/93204@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105071 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/inspector/front-end/timelinePanel.css
+++ b/Source/WebCore/inspector/front-end/timelinePanel.css
@@ -151,6 +151,10 @@
     overflow-x: hidden;
 }
 
+#timeline-container .split-view-sidebar-left {
+    z-index: 1;
+}
+
 .timeline-category-statusbar-item {
     height: 24px;
     line-height: 24px;
